--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^15.3.0",
     "lodash": "^4.17.19",
     "next": "9.4.4",
+    "next-auth": "^3.1.0",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
