--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^10.0.27",
     "apollo-boost": "^0.4.9",
     "emotion-theming": "^10.0.27",
+    "faunadb": "^2.14.2",
     "graphql": "^15.3.0",
     "lodash": "^4.17.19",
     "next": "9.4.4",
