--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "next build"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
