--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.49",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.2"
   }
 }
