--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@types/node": "^14.11.1",
     "@types/react": "^16.9.49",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
