Change again the way we retrieve data

--- a/package.json
+++ b/package.json
@@ -10,24 +10,20 @@
     "prettier": "prettier --write {components,config,lib,pages}/**/*.{js,ts,jsx,tsx}"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.0",
     "@apollo/react-hooks": "^4.0.0",
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
-    "apollo-boost": "^0.4.9",
     "emotion-theming": "^10.0.27",
     "faunadb": "^3.0.1",
     "graphql": "^15.3.0",
     "lodash": "^4.17.20",
     "next": "9.5.3",
     "next-auth": "^3.1.0",
-    "node-fetch": "^2.6.1",
-    "passport": "^0.4.1",
-    "passport-github": "^1.1.0",
     "react": "16.13.1",
     "react-color": "^2.18.1",
     "react-dom": "16.13.1",
-    "react-query": "^2.22.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
