--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
+    "axios": "^0.20.0",
     "emotion-theming": "^10.0.27",
     "faunadb": "^3.0.1",
     "graphql": "^15.3.0",
     "lodash": "^4.17.20",
+    "moment": "^2.28.0",
     "next": "9.5.3",
     "next-auth": "^3.1.0",
     "react": "16.13.1",
     "react-color": "^2.18.1",
     "react-dom": "16.13.1",
+    "react-query": "^2.23.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
