--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "env": {
     "FAUNADB_TOKEN": "@faunadb_token",
     "OVERSEER_APP_CLIENTID": "@overseer_app_clientid",
-    "OVERSEER_APP_CLIENTSECRET": "@overseer_app_clientsecret"
+    "OVERSEER_APP_CLIENTSECRET": "@overseer_app_clientsecret",
+    "NEXTAUTH_URL": "https://backoffice.augora.fr"
   }
 }
