--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/core": "^10.1.0",
     "@emotion/styled": "^10.0.27",
     "axios": "^0.21.0",
+    "color": "^3.1.3",
     "emotion-theming": "^10.0.27",
     "faunadb": "^3.0.1",
     "graphql": "^15.4.0",
