Add images endpoints + secrets

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,13 @@
+# FaunaDB
 FAUNADB_TOKEN=secret
+
+# GitHub OAuth App
 OVERSEER_APP_CLIENTID=secret
 OVERSEER_APP_CLIENTSECRET=secret
+
+# Next Auth
 NEXTAUTH_URL=http://localhost:3000
+
+# Azure Storage
+AZURE_STORAGE_ACCOUNT=secret
+AZURE_STORAGE_ACCESS_KEY=secret
