--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@apollo/react-hooks": "^4.0.0",
+    "@azure/storage-blob": "^12.2.1",
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.1.1",
     "@emotion/styled": "^10.0.27",
+    "@vercel/node": "^1.8.4",
     "axios": "^0.21.0",
     "color": "^3.1.3",
     "emotion-theming": "^10.0.27",
     "faunadb": "^3.0.1",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
+    "mime-types": "^2.1.27",
     "moment": "^2.29.1",
     "next": "10.0.0",
     "next-auth": "^3.1.0",
