--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "17.0.1",
+    "react-icons": "^3.11.0",
     "react-query": "^2.25.2",
     "react-query-devtools": "^2.6.1",
     "styled-components": "^5.2.1"
