--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.1.1",
     "@emotion/styled": "^10.0.27",
-    "@vercel/node": "^1.8.4",
     "axios": "^0.21.0",
     "color": "^3.1.3",
     "emotion-theming": "^10.0.27",
@@ -30,12 +29,14 @@
     "react": "17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "17.0.1",
+    "react-dropzone": "^11.2.3",
     "react-icons": "^3.11.0",
     "react-query": "^2.26.1",
-    "react-query-devtools": "^2.6.1",
-    "styled-components": "^5.2.1"
+    "react-query-devtools": "^2.6.1"
   },
   "devDependencies": {
+    "@vercel/node": "^1.8.4",
+    "@types/react-dropzone": "^5.1.0",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "eslint": "^7.12.1",
