--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "@apollo/client": "^3.2.5",
     "@apollo/react-hooks": "^4.0.0",
     "@azure/storage-blob": "^12.2.1",
-    "@chakra-ui/core": "^0.8.0",
-    "@emotion/core": "^10.1.1",
-    "@emotion/styled": "^10.0.27",
+    "@chakra-ui/core": "next",
+    "framer-motion": "latest",
     "axios": "^0.21.0",
     "color": "^3.1.3",
-    "emotion-theming": "^10.0.27",
     "faunadb": "^3.0.1",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
