--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@apollo/client": "^3.2.5",
     "@apollo/react-hooks": "^4.0.0",
     "@azure/storage-blob": "^12.3.0",
-    "@chakra-ui/core": "next",
-    "framer-motion": "latest",
     "axios": "^0.21.0",
     "color": "^3.1.3",
     "faunadb": "^3.0.1",
@@ -30,7 +28,11 @@
     "react-dropzone": "^11.2.4",
     "react-icons": "^3.11.0",
     "react-query": "^2.26.2",
-    "react-query-devtools": "^2.6.3"
+    "react-query-devtools": "^2.6.3",
+    "@chakra-ui/react": "^1.0.0",
+    "framer-motion": "^2.9.4",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0"
   },
   "devDependencies": {
     "@vercel/node": "^1.8.5",
