--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@apollo/client": "^3.2.5",
     "@apollo/react-hooks": "^4.0.0",
     "@azure/storage-blob": "^12.3.0",
+    "@chakra-ui/react": "^1.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "axios": "^0.21.0",
     "color": "^3.1.3",
     "faunadb": "^3.0.1",
+    "framer-motion": "^2.9.4",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
     "mime-types": "^2.1.27",
@@ -28,17 +32,14 @@
     "react-dropzone": "^11.2.4",
     "react-icons": "^3.11.0",
     "react-query": "^2.26.2",
-    "react-query-devtools": "^2.6.3",
-    "@chakra-ui/react": "^1.0.0",
-    "framer-motion": "^2.9.4",
-    "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0"
+    "react-query-devtools": "^2.6.3"
   },
   "devDependencies": {
-    "@vercel/node": "^1.8.5",
-    "@types/react-dropzone": "^5.1.0",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
+    "@types/react-dropzone": "^5.1.0",
+    "@vercel/node": "^1.8.5",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
