--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@emotion/styled": "^11.0.0",
     "axios": "^0.21.0",
     "color": "^3.1.3",
+    "date-fns": "^2.16.1",
     "faunadb": "^3.0.1",
     "framer-motion": "^2.9.4",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
     "mime-types": "^2.1.27",
-    "moment": "^2.29.1",
     "next": "10.0.1",
     "next-auth": "^3.1.0",
     "react": "17.0.1",
