--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dropzone": "^11.2.4",
     "react-icons": "^3.11.0",
     "react-query": "^2.26.2",
-    "react-query-devtools": "^2.6.3"
+    "react-query-devtools": "^2.6.3",
+    "react-table": "^7.6.2"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.0",
