--- a/package.json
+++ b/package.json
@@ -10,41 +10,41 @@
     "prettier": "prettier --write {components,config,lib,pages}/**/*.{js,ts,jsx,tsx}"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.11",
+    "@apollo/client": "^3.5.6",
     "@apollo/react-hooks": "^4.0.0",
     "@azure/storage-blob": "^12.8.0",
-    "@chakra-ui/react": "^1.6.7",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "axios": "^0.21.4",
-    "color": "^4.0.1",
-    "date-fns": "^2.24.0",
+    "@chakra-ui/react": "^1.7.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@supabase/supabase-js": "^1.29.1",
+    "axios": "^0.24.0",
+    "color": "^4.1.0",
+    "date-fns": "^2.28.0",
     "faunadb": "^4.4.1",
-    "framer-motion": "^4.1.17",
-    "graphql": "^15.5.3",
+    "framer-motion": "^5.5.6",
+    "graphql": "^16.2.0",
     "lodash": "^4.17.21",
-    "mime-types": "^2.1.32",
-    "next": "11.1.2",
-    "next-auth": "^3.29.0",
+    "mime-types": "^2.1.34",
+    "next": "12.0.7",
     "react": "17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "17.0.2",
-    "react-dropzone": "^11.4.0",
-    "react-icons": "^4.2.0",
-    "react-query": "^3.23.2",
+    "react-dropzone": "^11.5.1",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.34.7",
     "react-query-devtools": "^2.6.3",
     "react-table": "^7.7.0"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.1",
-    "@types/node": "^16.9.2",
-    "@types/react": "^17.0.21",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
     "@types/react-dropzone": "^5.1.0",
     "@vercel/node": "^1.12.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.4.1",
-    "typescript": "^4.4.3"
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   }
 }
