--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@supabase/supabase-js": "^1.29.1",
+    "@supabase/ui": "^0.36.2",
     "axios": "^0.24.0",
     "color": "^4.1.0",
     "date-fns": "^2.28.0",
