--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,4 @@
-# FaunaDB
-FAUNADB_TOKEN=secret
-
-# GitHub OAuth App
-OVERSEER_APP_CLIENTID=secret
-OVERSEER_APP_CLIENTSECRET=secret
-
-# Next Auth
-NEXTAUTH_URL=http://localhost:3000
-
-# Azure Storage
-AZURE_STORAGE_ACCOUNT=secret
-AZURE_STORAGE_ACCESS_KEY=secret
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=https://nptlldvxqlpsqftjchty.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=<anon_key>
+NEXT_PRIVATE_SUPABASE_SERVICE_KEY=<service_key>
