--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "react-dropzone": "^11.5.1",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.7",
-    "react-query-devtools": "^2.6.3",
-    "react-table": "^7.7.0"
+    "react-query-devtools": "^2.6.3"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.1",
