--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "test": "next build",
+    "lint": "next lint",
     "prettier": "prettier --write {components,config,lib,pages}/**/*.{js,ts,jsx,tsx}"
   },
   "dependencies": {
@@ -37,6 +38,7 @@
     "@types/react-dropzone": "^5.1.0",
     "@vercel/node": "^1.12.1",
     "eslint": "^8.6.0",
+    "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
