--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "@types/react": "^17.0.38",
     "@types/react-dropzone": "^5.1.0",
     "@vercel/node": "^1.12.1",
+    "autoprefixer": "^10.4.2",
     "eslint": "^8.6.0",
     "eslint-config-next": "12.0.9",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.18",
     "typescript": "^4.5.5"
   }
 }
