--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-query": "^3.34.12"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "@types/mime-types": "^2.1.1",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
