--- a/.github/workflows/CI_CD_Master.yml
+++ b/.github/workflows/CI_CD_Master.yml
@@ -69,7 +69,7 @@ jobs:
           vercel-token: ${{ secrets.ZEIT_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           github-comment: false
-          vercel-org-id: ${{ secrets.ZEIT_ORGID_AUGORA }}
+          vercel-org-id: ${{ secrets.VERCEL_AUGORA_ORGID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECTID_OVERSEER }}
           alias-domains: |
             backoffice.augora.fr
