--- a/package.json
+++ b/package.json
@@ -8,44 +8,40 @@
     "start": "next start",
     "test": "next build",
     "lint": "next lint",
-    "prettier": "prettier --write {components,config,lib,pages}/**/*.{js,ts,jsx,tsx}"
+    "prettier": "prettier --write {components,config,lib,pages,app}/**/*.{js,ts,jsx,tsx}"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.1.2",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@fontsource/roboto-slab": "^4.5.8",
-    "@supabase/supabase-js": "^1.35.3",
-    "@supabase/ui": "^0.36.5",
-    "axios": "^0.27.2",
+    "@fontsource/roboto-slab": "^5.0.20",
+    "@nextui-org/react": "^2.4.5",
+    "@supabase/supabase-js": "^2.44.4",
+    "axios": "^1.7.2",
     "color": "^4.2.3",
-    "date-fns": "^2.28.0",
-    "framer-motion": "^6.3.4",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.8",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
-    "next": "12.1.6",
-    "react": "18.1.0",
+    "next": "14.2.5",
+    "react": "18.3.1",
     "react-color": "^2.19.3",
-    "react-dom": "18.1.0",
-    "react-dropzone": "^14.2.1",
-    "react-icons": "^4.3.1",
-    "react-query": "^3.39.0"
+    "react-dom": "18.3.1",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.2.1",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.2",
-    "@types/mime-types": "^2.1.1",
-    "@types/node": "^17.0.35",
-    "@types/react": "^18.0.9",
+    "@types/mime-types": "^2.1.4",
+    "@types/node": "^20.14.11",
+    "@types/react": "^18.3.3",
     "@types/react-dropzone": "^5.1.0",
-    "@vercel/node": "^1.15.3",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.16.0",
-    "eslint-config-next": "12.1.6",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "postcss": "^8.4.14",
-    "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.7.2"
+    "@vercel/node": "^3.2.7",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.7.0",
+    "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.6",
+    "typescript": "^5.5.3"
   }
 }
