--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "18.3.1",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.4",
