--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "next build",
     "start": "next start",
     "test": "next build",
-    "prettier": "prettier --write {components,config,lib,pages,app}/**/*.{js,ts,jsx,tsx}"
+    "prettier": "prettier --write {components,config,lib,pages,app}/**/*.{js,ts,jsx,tsx} --no-error-on-unmatched-pattern"
   },
   "dependencies": {
     "@fontsource/roboto-slab": "^5.0.20",
     "@nextui-org/react": "^2.4.5",
     "@supabase/supabase-js": "^2.44.4",
+    "@tanstack/react-query": "^5.51.9",
     "axios": "^1.7.2",
     "color": "^4.2.3",
     "date-fns": "^3.6.0",
@@ -25,7 +26,6 @@
     "react-dom": "18.3.1",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
-    "react-query": "^3.39.3",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
