--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sonner": "^1.5.0"
   },
   "devDependencies": {
+    "@octokit/types": "^13.5.0",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
