--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/roboto-slab": "^5.0.20",
     "@nextui-org/react": "^2.4.6",
+    "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
     "@tanstack/react-query": "^5.51.9",
     "axios": "^1.7.2",
