--- a/.github/workflows/CI_CD_Master.yml
+++ b/.github/workflows/CI_CD_Master.yml
@@ -9,10 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Use Node.js 
-        uses: actions/setup-node@v1
+      - name: Use Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 22.x
 
@@ -43,6 +43,6 @@ jobs:
           vercel-project-id: ${{ secrets.VERCEL_PROJECTID_OVERSEER }}
           github-comment: false
           vercel-args: --prod --force --skip-domain
-          vercel-version: "34.3.0"
+          vercel-version: '34.3.0'
           alias-domains: |
             backoffice.augora.fr
