--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/mime-types": "^2.1.4",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
+    "@types/react-color": "^3.0.12",
     "@types/react-dropzone": "^5.1.0",
     "@vercel/node": "^3.2.7",
     "autoprefixer": "^10.4.19",
